# openhype

./: .gitignore  LICENSE  README.md  create_eval_stats.py  eval.py  exp_5_scenes.sh  gpu_schedular.py  main_pipeline.py  pyproject.toml  run_batch_exp.py
benchmark/: README.md  scannetpp.py  scannetpp_preprocess.py  scene_ids.txt
configs/multiple_scenes/: config_template_test.yaml  config_template_train.yaml
configs/single_scene/: config_template_test.yaml  config_template_train.yaml
openhype/: __init__.py  task_registry.py  variable_registry.py
openhype/openhype_ae/: embed_feats.py  hyperbolic_ae.py  main.py  mask_feature_dataset.py  train.py
openhype/openhype_eval/: base_evaluator.py  evaluator_registry.py  scannetpp_evaluator.py
openhype/openhype_nerf/: main.py
openhype/openhype_nerf/openhypenerf/: openhypenerf_config.py  openhypenerf_datamanager.py  openhypenerf_field.py  openhypenerf_fieldheadnames.py  openhypenerf_model.py  openhypenerf_pipeline.py
openhype/openhype_preprocess/: crop_encoder.py  extract_masks_semanticsam.py  img_seg_model.py  main.py  preprocessor.py
openhype/utils/: colormaps.py  io.py  loggingmanager.py  lorentz.py  utils.py  wandb_logger.py
